# CoffeeRL

./: .gitignore  .pre-commit-config.yaml  COMMUNITY_COLLECTION_GUIDE.md  Dockerfile  Dockerfile.gradio  LICENSE  Makefile  NOTICE  README.md  check_results.py  cofferl.db  create_sample_experiments.py  demo_experiment_flow.py  demo_experiment_flow_sqlite.py  docker-compose.yml  main.py  pyproject.toml  run_dashboard.py  run_gradio.py  setup.cfg  simple_demo.py  test_submission.py
config/: .gitkeep  __init__.py  platform_config.py
data/: .gitkeep
docs/: CLI_TOOLS.md  CONTRIBUTING.md  DEPLOYMENT.md  PIPELINE.md  QLORA_SETUP.md  gradio-deployment.md
examples/: data_collection_demo.py  simple_demo.py
models/: .gitkeep
notebooks/: .gitkeep
scripts/: analyze_performance.sh  coffee-reasoning-prd.md  coffee-rl-unified-prd.md  create_validation_dataset.py  evaluate_local.sh  format_training_data.py  generate_data.py  process_community_data.py  run_experiment.sh  setup_community_collection.py  test_community_processing.py  test_qlora_setup.py  train_local.sh
src/: __init__.py  analytics.py  analyze_performance.py  batch_trainer.py  community_collection.py  dashboard.py  data_collection.py  data_generation.py  database.py  evaluate_local.py  experiment_generator.py  experiment_tracker.py  gradio_app.py  hf_model_manager.py  kdtree_explorer.py  manual_examples_collector.py  model_comparator.py  parameter_space.py  parameter_space_explorer.py  qlora_config.py  reward_calculator.py  rl_environment.py  train_local.py  train_qlora.py  train_rl.py  uncertainty_estimator.py
tests/: __init__.py  test_analytics.py  test_analyze_performance.py  test_basic.py  test_dashboard.py  test_data_collection.py  test_data_generation.py  test_database.py  test_evaluate_local.py  test_experiment_generator.py  test_experiment_tracker.py  test_format_training_data.py  test_gradio_app.py  test_kdtree_explorer.py  test_manual_examples_collector.py  test_model_comparator.py  test_parameter_space.py  test_parameter_space_explorer.py  test_pipeline.py  test_qlora_config.py  test_reward_calculator.py  test_rl_environment.py  test_train_local.py  test_validation_dataset.py  (+1 more)
(+14 files in other folders)
