[project]
name = "coffeerl"
version = "0.1.0"
description = "A vibe-coded Qwen2 RL training model for making V60 Pour Over Covfefe."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11.11"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "gradio>=5.33.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.3.0",
    "peft>=0.15.2",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "transformers>=4.52.4",
    "torch>=2.0.0",
    "trl>=0.12.0",
    "tensorboard>=2.15.0",
    "tiktoken>=0.5.0",
    "protobuf>=3.20.0",
    "psutil>=5.9.0",
    "sqlalchemy>=1.4.0,<2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "plotly>=5.17.0",
    "dash>=2.14.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
]
training = [
    "bitsandbytes>=0.44.1; sys_platform == 'linux'",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatch build configuration
[tool.hatch.build.targets.wheel]
packages = ["src"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
files = ["src"]
namespace_packages = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
